--- a/irisclusters/01-minimal.yaml
+++ b/irisclusters/01-minimal.yaml
@@ -11,4 +11,9 @@ spec:
   # It doesn't contain "shards" field, so a standalone instance is deployed
   topology:
     data:
-      image: <dockerhub_account>/secured-rest-api:2021.1.0.215.3-zpm
+      image: <dockerhub_account>/secured-rest-api:2022.2.0.345
+      podTemplate:
+        spec:
+          args:
+          - --check-caps
+          - "false"
